Added information about myself on the index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 Hector Serrano Gonzalez
+
+About
+Hi my name is Hector Serrano Gonzalez. I was born in Mexico city and moved here to the United States at a very young age.
+
+Experience
+Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.
+
+Connect
+hserrano1030@gmail.com
+https://github.com/HectorSerranoGonzalez
