Revert "Added basic HTML elements to index file"

--- a/index.html
+++ b/index.html
@@ -1,33 +1,11 @@
-<!DOCTYPE html>
+Hector Serrano Gonzalez
 
-<html>
-    <head>
-        <title>My Webpage</title>
-        <meta charset="UFT-8">
-        <meta>
-    </head>
+About
+Hi my name is Hector Serrano Gonzalez. I was born in Mexico city and moved here to the United States at a very young age.
 
-    <body>
-        Hector Serrano Gonzalez
+Experience
+Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.
 
-        <section>
-        <h1>About</h1>
-        <p> my name is Hector Serrano Gonzalez. I was born in Mexico city and moved here to the United States at a very young age.</p>
-        </section>
-
-        <section>
-        <h1>Experience</h1>
-        <p>Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.</p>
-        </section>
-
-        <section>
-        <h1>Connect</h1>
-           <ul>
-               <li>hserrano1030@gmail.com</li>
-               <li>https://github.com/HectorSerranoGonzalez</li>
-           </ul>
-        </section>
-    </body>
-
-
-</html>
+Connect
+hserrano1030@gmail.com
+https://github.com/HectorSerranoGonzalez
