--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <p>Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.</p>
         </section>
 
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul></ul>
+        </section>
+
         <section>
         <h1>Connect</h1>
            <ul>
@@ -27,6 +32,8 @@
                <li>https://github.com/HectorSerranoGonzalez</li>
            </ul>
         </section>
+        <footer></footer>
+        <script src="js/index.js"></script>
     </body>
 
 
