--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
                <li>https://github.com/HectorSerranoGonzalez</li>
            </ul>
         </section>
+
+        <section>
+            <h2>Leave a Message</h2>
+            <form name="leave_message">
+            <label>Name</label><br>
+            <input type="text" name="name" required="true"><br>
+            <label>Email</label><br>
+            <input type="email" name="email" required="true"><br>
+            <label>Message</label><br>
+            <textarea name="message" required="true"></textarea><br>
+            
+            <button type="submit">Submit</button>
+            </form>
+        </section>
+
+        <section id="messages">
+            <h2>Messages</h2>
+            <ul>
+                
+            </ul>
+        </section>
+
         <footer></footer>
         <script src="js/index.js"></script>
     </body>
