added basic css

--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
         <title>My Webpage</title>
         <meta charset="UFT-8">
         <meta>
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body>
         Hector Serrano Gonzalez
 
         <section>
-        <h1>About</h1>
-        <p> my name is Hector Serrano Gonzalez. I was born in Mexico city and moved here to the United States at a very young age.</p>
+        <h1 class="aboutHead">About</h1>
+        <p class="aboutPara"> My name is Hector Serrano Gonzalez. I was born in Mexico city and moved here to the United States at a very young age.</p>
         </section>
 
         <section>
-        <h1>Experience</h1>
-        <p>Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.</p>
+        <h1 class="experienceHead">Experience</h1>
+        <p class="experiencePara">Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.</p>
         </section>
 
         <section id="skills">
-            <h2>Skills</h2>
+            <h2 class="skillsHead">Skills</h2>
             <ul></ul>
         </section>
 
