Added more css to entire page and more info

--- a/index.html
+++ b/index.html
@@ -9,38 +9,66 @@
     </head>
 
     <body>
-        Hector Serrano Gonzalez
+       <div class="topnav">
+            <a href="#about">About</a>
+            <a href="#experience">Experience</a>
+            <a href="#skills">Skills</a>
+            <a href="#connect">Connect</a>
+            <a href="#message">Messages</a>
+        </div>
 
-        <section>
-        <h1 class="aboutHead">About</h1>
-        <p class="aboutPara"> My name is Hector Serrano Gonzalez. I was born in Mexico city and moved here to the United States at a very young age.</p>
-        </section>
+        <div class="menu">
+            <img src="square.png" alt="Square">
+            <span class="name">Hector Serrano Gonzalez</span>
+        </div>
 
-        <section>
-        <h1 class="experienceHead">Experience</h1>
-        <p class="experiencePara">Nothing very exciting unfortunately. I've worked in fast food, retail, warehouse, and I'm currently working as a shipping clerk.</p>
+
+        <section id="about">
+        <h1><span class="aboutHeading">&nbsp About</span></h1>
+        <p>&nbsp&nbsp&nbspHi, I'm Hector! I'm currently working as a shipping clerk and sell things on eBay but being a shipping clerk is not my passion and selling on eBay is just a hobby. I want to better myself so I enrolled in the intro to programming class here in the Code the Dream School.
+            I no longer simply want a job but rather a career that I can be proud of. It's a tough road ahead but I know I can get through it.
+        </p>
         </section>
 
         <section id="skills">
-            <h2 class="skillsHead">Skills</h2>
-            <ul></ul>
+            <h2><span class="skillsHeading">&nbsp Skills</span></h2>
+            <ul class="skillsList"></ul>
         </section>
 
-        <section>
-        <h1>Connect</h1>
+        <section id="experience">
+        <h1><span class="experienceHeading">&nbsp Experience</span></h1>
+        <ul class="experienceList">
+            <li><span class="job">eBay</span> <span class="jobDate">10/30/1993</span></li>
+            <li><span class="job">Shipping Clerk</span> <span class="jobDate">10/30/1993</span></li>
+            <li><span class="job">Tjmaxx</span> <span class="jobDate">10/30/1993</span></li>
+            <li><span class="job">Amazon</span> <span class="jobDate">10/30/1993</span></li>
+            <li><span class="job">Target</span> <span class="jobDate">10/30/1993</span></li>
+            <li><span class="job">McDonalds</span> <span class="jobDate">10/30/1993</span></li>
+        </ul>
+        </section>
+
+<!--         <section id="skills">
+            <h2><span class="skillsHeading">&nbsp Skills</span></h2>
+            <ul class="skillsList"></ul>
+        </section> -->
+
+        <section id="connect">
+        <h1>&nbsp Connect</h1>
            <ul>
                <li>hserrano1030@gmail.com</li>
                <li>https://github.com/HectorSerranoGonzalez</li>
            </ul>
         </section>
 
-        <section>
-            <h2>Leave a Message</h2>
+        <section id="message">
+            <h2>&nbsp Leave a Message</h2>
             <form name="leave_message">
+            <div class="thisForm">
             <label>Name</label><br>
             <input type="text" name="name" required="true"><br>
             <label>Email</label><br>
             <input type="email" name="email" required="true"><br>
+            </div>
             <label>Message</label><br>
             <textarea name="message" required="true"></textarea><br>
             
@@ -49,7 +77,7 @@
         </section>
 
         <section id="messages">
-            <h2>Messages</h2>
+            <h2>&nbsp Messages</h2>
             <ul>
                 
             </ul>
