added projects with using JSON

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <ul class="skillsList"></ul>
         </section>
 
+        <section id="projects">
+            <h2><span class="projectsHeading">&nbsp Projects</span></h2>
+            <ul></ul>
+        </section>
+        
+
         <section id="experience">
         <h1><span class="experienceHeading">&nbsp Experience</span></h1>
         <ul class="experienceList">
@@ -64,9 +70,9 @@
             <h2>&nbsp Leave a Message</h2>
             <form name="leave_message">
             <div class="thisForm">
-            <label>Name</label><br>
+            <label>Name&nbsp</label><br>
             <input type="text" name="name" required="true"><br>
-            <label>Email</label><br>
+            <label>Email&nbsp&nbsp</nbsp1></label><br>
             <input type="email" name="email" required="true"><br>
             </div>
             <label>Message</label><br>
