Final Small edits for Final Submission

--- a/index.html
+++ b/index.html
@@ -11,45 +11,45 @@
     <body>
        <div class="topnav">
             <a href="#about">About</a>
-            <a href="#experience">Experience</a>
             <a href="#skills">Skills</a>
-            <a href="#connect">Connect</a>
+            <a href="#projects">Projects</a>
+            <a href="#experience">Experience</a>
             <a href="#message">Messages</a>
         </div>
 
         <div class="menu">
-            <img src="square.png" alt="Square">
+            <img class="myPhoto" src="me.jpg" alt="me">
             <span class="name">Hector Serrano Gonzalez</span>
         </div>
 
 
         <section id="about">
-        <h1><span class="aboutHeading">&nbsp About</span></h1>
+        <h1><span class="aboutHeading">About</span></h1>
         <p>&nbsp&nbsp&nbspHi, I'm Hector! I'm currently working as a shipping clerk and sell things on eBay but being a shipping clerk is not my passion and selling on eBay is just a hobby. I want to better myself so I enrolled in the intro to programming class here in the Code the Dream School.
             I no longer simply want a job but rather a career that I can be proud of. It's a tough road ahead but I know I can get through it.
         </p>
         </section>
 
         <section id="skills">
-            <h2><span class="skillsHeading">&nbsp Skills</span></h2>
+            <h2><span class="skillsHeading">Skills</span></h2>
             <ul class="skillsList"></ul>
         </section>
 
         <section id="projects">
-            <h2><span class="projectsHeading">&nbsp Projects</span></h2>
-            <ul></ul>
+            <h2><span class="projectsHeading">Projects</span></h2>
+            <ul class="projectsList"></ul>
         </section>
         
 
         <section id="experience">
-        <h1><span class="experienceHeading">&nbsp Experience</span></h1>
+        <h1><span class="experienceHeading">Experience</span></h1>
         <ul class="experienceList">
-            <li><span class="job">eBay</span> <span class="jobDate">10/30/1993</span></li>
-            <li><span class="job">Shipping Clerk</span> <span class="jobDate">10/30/1993</span></li>
-            <li><span class="job">Tjmaxx</span> <span class="jobDate">10/30/1993</span></li>
-            <li><span class="job">Amazon</span> <span class="jobDate">10/30/1993</span></li>
-            <li><span class="job">Target</span> <span class="jobDate">10/30/1993</span></li>
-            <li><span class="job">McDonalds</span> <span class="jobDate">10/30/1993</span></li>
+            <li><span class="job">eBay</span> <span class="jobDate">07-15-2020 - Now</span></li>
+            <li><span class="job">Shipping Clerk</span> <span class="jobDate">09-25-2021 - Now</span></li>
+            <li><span class="job">Tjmaxx</span> <span class="jobDate">09/12/2017 - 09/24/2021</span></li>
+            <li><span class="job">Amazon</span> <span class="jobDate">9/23/2015 - 09/01/2017</span></li>
+            <li><span class="job">Target</span> <span class="jobDate">11/23/2012 - 09/14/2015</span></li>
+            <li><span class="job">McDonalds</span> <span class="jobDate">10/30/2009 - 11/21/2012</span></li>
         </ul>
         </section>
 
@@ -58,16 +58,16 @@
             <ul class="skillsList"></ul>
         </section> -->
 
-        <section id="connect">
-        <h1>&nbsp Connect</h1>
+<!--         <section id="connect">
+        <h1>Connect</h1>
            <ul>
                <li>hserrano1030@gmail.com</li>
                <li>https://github.com/HectorSerranoGonzalez</li>
            </ul>
-        </section>
+        </section> -->
 
         <section id="message">
-            <h2>&nbsp Leave a Message</h2>
+            <h2>Leave a Message</h2>
             <form name="leave_message">
             <div class="thisForm">
             <label>Name&nbsp</label><br>
@@ -83,13 +83,16 @@
         </section>
 
         <section id="messages">
-            <h2>&nbsp Messages</h2>
+            <h2>Messages</h2>
             <ul>
                 
             </ul>
         </section>
 
-        <footer></footer>
+        <footer>
+            <a href="mailto:hserrano1030@gmail.com"><img src="gmail.png"/></a>
+            <a href="https://github.com/HectorSerranoGonzalez"><img src="github.png"></a>
+        </footer>
         <script src="js/index.js"></script>
     </body>
 
